feat: settings bound to a file, and fix a silent ordering bug
The store turns the schema into something a server owner can edit. config.yml is
generated from the record with each setting's title, description, range and
choices above it, so the file can be edited without the source open.

A file gets edited by somebody who has gone to bed, so nothing in it may stop
the server: a wrong type falls back for that one setting, an out-of-range number
is pulled inside the range rather than thrown away, a missing key takes its
default, a key nobody recognises is left alone so a downgrade does not delete
what a newer version added, and a file that is not YAML leaves every default in
place. All of it is recorded in problems() and logged.

A typed command is deliberately stricter than a file: set() refuses what load()
would have clamped, because whoever typed it is standing there and can be told,
where a value silently changed under a server owner is how they stop trusting
the plugin.

The ordering bug: the schema kept its settings in Map.copyOf, whose iteration
order is unspecified, while instantiate() pairs them with the canonical
constructor's parameters by position. Snapshots were built with the components
shuffled — surfacing as ClassCastException from inside reflection rather than as
anything resembling the cause. Now a LinkedHashMap, with a test naming the
invariant.